# SkP2_6C_django_shop

./: .env.sample  .gitignore  README.md  manage.py  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/fixtures/: blog.json
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_detail.html  blog_list.html
catalog/: admin.py  cache.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: import_data.py
catalog/migrations/: 0001_initial.py  0002_contact.py  0002_product_manufactured_at.py  0003_blog.py  0004_version.py  0005_delete_blog.py  0006_product_author.py  0007_alter_product_options_product_is_published.py
catalog/templates/catalog/: base.html  blog_detail.html  blog_list.html  contact.html  home_page.html  nav_menu.html  product_detail.html  product_form.html  product_list.html  products.html  view_product.html
catalog/templates/catalog/includes/: inc_form.html  inc_products.html
catalog/templatetags/: tags.py
config/: asgi.py  settings.py  urls.py  wsgi.py
fixtures/: catalog_data.json  catalogdata.json
users/: admin.py  forms.py  models.py  views.py
users/fixtures/: groups.json
users/management/commands/: castom.py
users/migrations/: 0001_initial.py  0002_user_is_superuser.py  0003_user__is_staff.py  0004_user_groups_user_user_permissions.py
