[tool.poetry]
name = "skp2-6c-django-shop"
version = "0.1.0"
description = ""
authors = ["Stereo2025 <teneloks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
pillow = "^10.2.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
ipython = "^8.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
